--- a/src/app/page-recherche/page-recherche.page.html
+++ b/src/app/page-recherche/page-recherche.page.html
@@ -45,6 +45,7 @@
        <ion-card-title>Informations de l'annonce</ion-card-title>
        
        <p>Description : {{ annonce.description }}</p>
+       <p>Catégorie : {{ annonce.categorie }}</p>
        <p>Téléphone 1 : {{ annonce.phone1 }}</p>
        <p>Téléphone 2 : {{ annonce.phone2 }}</p>
        <p>Téléphone 3 : {{ annonce.phone3 }}</p>
